--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/aodem/lucid-dream-app#readme",
   "dependencies": {
+    "express": "^4.16.4",
+    "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
-    "sequelize": "^4.42.1"
+    "sequelize": "^4.42.1",
+    "sequelize-cli": "^5.4.0"
   }
 }
