--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/aodem/lucid-dream-app#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "express-handlebars": "^3.0.2",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
     "sequelize": "^4.42.1",
