--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password":"RVLmusic",
+    "password":"LukeNLeia007!",
     "database": "dream_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
